# util/validation.js
@@ -1,4 +1,3 @@
-
 const validator = require('./helper');
 
 const venueCheck = (req, res, next) => {
@@ -22,30 +21,31 @@ const venueCheck = (req, res, next) => {
 };
 
 const eventCheck = (req, res, next) => {
-    const validationRule = {
-      time: 'required|string',
-      date: 'required|string',
-      venueID: 'required|string',
-      ageGroup: 'required|string',
-      food: 'required|string',
-      sponsor: 'required|string',
-      theme: 'required|string',
-      cause: 'required|string',
-      eventPlanner: 'required|string'
-    };
-    validator(req.body, validationRule, {}, (err, status) => {
-      if (!status) {
-        res.status(412).send({
-          success: false,
-          message: 'Validation failed',
-          data: err
-        });
-      } else {
-        next();
-      }
-    });
+  const validationRule = {
+    time: 'required|string',
+    date: 'required|string',
+    venueID: 'required|string',
+    ageGroup: 'required|string',
+    food: 'required|string',
+    sponsor: 'required|string',
+    theme: 'required|string',
+    cause: 'required|string',
+    eventPlanner: 'required|string'
   };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
 
 module.exports = {
-  venueCheck, eventCheck
+  venueCheck,
+  eventCheck
 };
